bk_ida/gccida/g2/do_SUBST
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:890:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)v2 + 2)] == MODE_INT && *( _WORD *)newval == 54 ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:893:46: error: use of undeclared identifier 'machine_mode'
if ( rtwint != trunc_int_for_mode( rtwint, ( machine_mode)*( ( unsigned __int8 *)v2 + 2)) ) 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:898:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees = undobuf_0.frees; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:899:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.frees ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:900:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:900:19: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
                  ^~~~~~~~~
                  undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:903:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undos = undobuf_0.undos; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:909:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = frees; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/do_SUBST/src/obj/combine.o] Error 1
